Fix camera 13Mpx
Tnks @Nothing-Dev

Signed-off-by: kn06497 <kn06497@hotmail.com>

--- a/arch/arm/configs/maxi_jagnm_defconfig
+++ b/arch/arm/configs/maxi_jagnm_defconfig
@@ -2464,6 +2464,7 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_IMX111 is not set
 CONFIG_IMX179=y
 CONFIG_IMX219=y
+CONFIG_IMX091=y
 # CONFIG_HI543 is not set
 # CONFIG_HI544 is not set
 # CONFIG_IMX132 is not set
